Fixed the navbar on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -45,3 +45,8 @@ h3 .discord-avatar, .discord-avatar {
     color: gray;
     font-size: 10px;
 }
+
+.navbar-text {
+    display: inline-block;
+    margin-right: 15px;
+}
